test/tests/stages/1_int_constants/invalid_parse/invalid_function_name.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[10]:
  int
  const int(3)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
